--- a/css/fag.css
+++ b/css/fag.css
@@ -53,15 +53,8 @@ a {
 }
 
 img {
-    height: 180px;
+    height: 300px;
     width: auto;
-}
-
-.subjectContainer {
-    margin: 10px;
-    display: grid;
-    grid-template-columns:auto auto auto;
-    color:black;
 }
 
 footer {
@@ -70,7 +63,20 @@ footer {
     bottom: 0;
 }
 
-.subjectBox {
-    margin: 10px;
-    border: 3px solid black;
+footer {
+    color: black;
+    margin-top: auto;
+    position: fixed;
+    bottom: 0;
+    padding: 10px;
+    background: rgb(90, 90, 90);
+    width: 100%;
+    height: auto;
+    text-align: center;
+}
+
+footer a:hover {
+    padding: 2px 8px;
+    border-radius: 3px;
+    background: rgb(100,100,100);
 }
