--- a/css/main.css
+++ b/css/main.css
@@ -1,20 +1,20 @@
 * {
     padding: 0;
     margin: 0;
-    text-decoration: none;
     list-style: none;
+    text-decoration: none;
     box-sizing: border-box;
 }
 
 body {
-   font-family: 'Montserrat'; 
+   font-family: 'Montserrat';
 }
 
 nav {
     background: #0082e6;
     height: 80px;
     width: 100%;
-
+    list-style: none;
 }
 
 label.logo {
@@ -60,10 +60,9 @@ footer {
     position: fixed;
     bottom: 0;
     padding: 10px;
-    background: rgb(200, 200, 200);
     width: 100%;
     height: auto;
-    text-align: center;
+    text-align: left;
 }
 
 footer a:hover {
@@ -78,7 +77,7 @@ footer a:hover {
     display: grid;
     grid-template-columns:auto auto auto;
     color:black;
-    text-align: center;
+    text-align: left;
 }
 
 .subjectContainer img {
@@ -87,6 +86,28 @@ footer a:hover {
 }
 
 .infoBox img {
-    height: 300px;
+    height: 350px;
     width: 500px;
+    border: black 5px solid;
+}
+
+.infoBox ul {
+    border: 3px solid black;
+    border-radius: 100px;
+    padding: 20px;
+    margin: 50px;
+}
+
+.infoBox {
+    margin-left: auto;
+    margin-top: 100px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+#leander {
+    font-size: 50px;
 }
