--- a/css/fag.css
+++ b/css/fag.css
@@ -114,6 +114,12 @@ h1 {
     margin-top: 50px;
 }
 
+h2 {
+    color: black;
+    text-align: center;
+    margin-top: 10px;
+}
+
 .tilbake {
     background-color: #1b9bff;
     width: 105px;  
@@ -125,20 +131,23 @@ h1 {
     margin: 10px;
 }
 
-.bokomslag {
-    padding: 20px;
-    display: flex;
-    justify-content: center;
-}
-
 .prodhistContainer {
     display: grid;
     grid-template-columns: auto auto;
     color: black;
+    justify-content: center;
+    padding: 30px;
+    text-align: center;
 }
 
 #bokomslag {
     width: 410px;
     height: 250px;
     border: solid 5px black;
-  }
+}
+
+#imlanlogo {
+    width: 410px;
+    height: 250px;
+    border: solid 5px black;
+}
