--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: 'digital-7-font';
+    src: url('/font/digital-7.ttf');
+}
+
 * {
     padding: 0;
     margin: 0;
@@ -45,14 +50,15 @@ nav ul li a {
     text-transform: uppercase;
 }
 
-a.active,a:hover {
+a.active,
+a:hover {
     background: #1b9bff;
     transition: .5s;
 }
 
 a {
-    color:black;
-      font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: black;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 footer {
@@ -69,7 +75,7 @@ footer {
 footer a:hover {
     padding: 2px 8px;
     border-radius: 3px;
-    background: rgb(120,120,120);
+    background: rgb(120, 120, 120);
 }
 
 .subjectContainer {
@@ -77,7 +83,7 @@ footer a:hover {
     margin: 10px;
     display: grid;
     grid-template-columns: auto auto auto;
-    color:black;
+    color: black;
 }
 
 .subjectContainer img {
@@ -123,4 +129,10 @@ footer a:hover {
     text-align: center;
     border: 1px solid black;
     color: black;
+}
+
+.tid p {
+    color: white;
+    font-family: 'digital-7-font';
+    font-size: 17px;
 }
